# numqt

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
Examples/: 1D_Infinite_Well.ipynb  1D_QHO.ipynb  2D_QHO.ipynb  3D_Hydrogen_Atom.ipynb  QHO_daptive_grid.ipynb
Examples/bosonic_ops/: 1D_HO.ipynb  1D_harmonic_spin_gas.ipynb  2D_HO.ipynb  2D_harmonic_spin_gas.ipynb  3D_harmonic_spin_gas.ipynb
Examples/finite_difference/harmonic_oscillator/: 1D_QHO.ipynb  2D_QHO.ipynb
Examples/finite_difference/infinite_well/: 1D_Infinite_Well.ipynb  2D_Infinite_Well.ipynb
Examples/harmonic_oscillator/: 1D_QHO.ipynb  2D_QHO.ipynb
Examples/infinite_well/: 1D_Infinite_Well.ipynb  2D_Infinite_Well.ipynb
Examples/tight_binding/harmonic_oscillator/: 1D_QHO.ipynb  2D_QHO.ipynb
Examples/tight_binding/harmonic_spin_gas/: 1D_harmonic_spin_gas.ipynb  2D_harmonic_spin_gas.ipynb
Examples/tight_binding/infinite_well/: 1D_Infinite_Well.ipynb  2D_Infinite_Well.ipynb
Examples/time_dependent/tight_binding/LKH/: Untitled.ipynb  parameters.py  perturbative_well_solver.py
Examples/time_dependent/tight_binding/harmonic_oscillator/: 1D_harmonic_oscillator.ipynb
Examples/time_dependent/tight_binding/infinite_well/: 1D_Infinite_Well.ipynb  2D_Infinite_Well.ipynb
Examples/time_independent/bosonic_ops/: 1D_HO.ipynb  1D_harmonic_spin_gas.ipynb  2D_HO.ipynb  2D_harmonic_spin_gas.ipynb  3D_HO.ipynb
numpt/: utils.py
src/numpt/: __init__.py  classes.py  spin_ops.py
src/numqt/: __init__.py  bos_ops.py  classes.py  fd_ops.py  landau_ops.py  spin_ops.py  utils.py
(+11 files in other folders)
