[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "numqt"  # Replace with your package name
version = "0.1.0"  # Update as needed
description = "A Python package for numerical and quantum spin calculations."
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "scikit-image",
    "plotly",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["numqt"]
